--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
           <input class="form-input" type="text" data-form-input />
           <button class="form-button" data-form-button>Novo Item</button>
         </form>
-        <ul class="list" data-list></ul>
+        <ul class="list" data-list>
+          <li></li>
+        </ul>
       </div>
     </div>
   </body>
