criando funcionalidades add tarefa concluir e deletar

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
           <input class="form-input" type="text" data-form-input />
           <button class="form-button" data-form-button>Novo Item</button>
         </form>
-        <ul class="list" data-list>
-          <li></li>
-        </ul>
+        <ul class="list" data-list></ul>
       </div>
+      <script src="js/lista-tarefa.js"></script>
     </div>
   </body>
 </html>
